[gd_scene load_steps=7 format=3 uid="uid://bjtxwcpd0fiwm"]

[ext_resource type="Script" path="res://Scripts/Player/GUI/GUI.gd" id="1_0cxmp"]
[ext_resource type="Texture2D" uid="uid://cq834sn5yet8" path="res://Assets/ui_big_pieces.png" id="2_nigat"]
[ext_resource type="PackedScene" uid="uid://d18jdwp8wrk2o" path="res://Scenes/Player/GUI/profile.tscn" id="3_tlbqw"]
[ext_resource type="PackedScene" uid="uid://o1j76o5olyee" path="res://Scenes/Player/GUI/inventory.tscn" id="4_bdumu"]
[ext_resource type="PackedScene" uid="uid://b7bjtsr4j2cbq" path="res://Scenes/Player/GUI/quests.tscn" id="5_31xxi"]
[ext_resource type="PackedScene" uid="uid://mgglmab8c3bf" path="res://Scenes/Player/GUI/dialog.tscn" id="6_wis50"]

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_0cxmp")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(130, 23.5)
scale = Vector2(3.2973, 1.73684)
texture = ExtResource("2_nigat")
region_enabled = true
region_rect = Rect2(259.299, 40.3437, 74.5596, 19.2939)

[node name="hp_bar" type="ProgressBar" parent="."]
offset_left = 35.0
offset_top = 12.0
offset_right = 221.0
offset_bottom = 35.0
value = 100.0
show_percentage = false

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Container"]
layout_mode = 0
offset_left = 180.0
offset_top = 107.0
offset_right = 969.0
offset_bottom = 548.0

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 0
offset_left = 243.0
offset_top = 107.0
offset_right = 403.0
offset_bottom = 546.0
theme_override_constants/separation = 5
alignment = 1

[node name="Profile" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
text = "Profile
"

[node name="Inventory" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
text = "Inventory"

[node name="Quests" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
text = "Quests"

[node name="Button" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
text = "Main Menu
"

[node name="Profile" parent="Container" instance=ExtResource("3_tlbqw")]
offset_left = 590.0
offset_top = 283.0
offset_right = 733.0
offset_bottom = 366.0

[node name="Inventory" parent="Container" instance=ExtResource("4_bdumu")]

[node name="Quests" parent="Container" instance=ExtResource("5_31xxi")]

[node name="DialogContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="DialogContainer"]
layout_mode = 0
offset_top = 608.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Dialog" parent="DialogContainer/Panel" instance=ExtResource("6_wis50")]
layout_mode = 0
offset_left = 519.0
offset_right = 559.0

[connection signal="pressed" from="Container/VBoxContainer/Profile" to="." method="_on_profile_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/Quests" to="." method="_on_quests_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/Button" to="." method="_on_button_pressed"]
